--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-scikit-learn
+scikit-learn==0.24.2
 seaborn==0.11.2
-imbalanced-learn==0.9.0
+imbalanced-learn==0.8.0
 streamlit==1.10.0
 imbalanced-learn
 vega-datasets
